objects/Offering_Release__c.object
<CustomObject>
    <fields>
        <fullName>Approve_Due_Date__c</fullName>
        <formula>LastModifiedDate + 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approve Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BVP__c</fullName>
        <label>BVP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Engagement Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offering_Release</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Plan_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Flight Plan ID</label>
        <referenceTo>Flight_Plan__c</referenceTo>
        <relationshipName>Offering_Release</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Plan_Name__c</fullName>
        <formula>Flight_Plan_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Opportunity Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Offering_Category__c</fullName>
        <label>Opportunity Category</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IT Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offering_Version__c</fullName>
        <label>Opportunity Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.Last_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPMC_Project_ID__c</fullName>
        <label>PPMC Project ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <description>The Practice is a category to classify the current area of the Offering Release.</description>
        <inlineHelpText>The Practice is a category to classify the current area of the Offering Release.</inlineHelpText>
        <label>Exec Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>Mahesh Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dick Steiner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Harmon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Egan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kreg Nichols</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russ Krauss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Tautges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christine Reischl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathy Garcia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Larry Stack</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Contacts__c</fullName>
        <label>Primary Business Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release_Description__c</fullName>
        <label>Opportunity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <description>A Opportunity Type is a category to classify the type of
Offering Release.</description>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Protype</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-Agile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-Waterfall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Start Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test_Project_Ullas</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Release_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Test Project Ullas</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OPP-{0000000000}</displayFormat>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>